2011-01-11  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        remember diffstate for review tool
        https://bugs.webkit.org/show_bug.cgi?id=52253

        If you use the global sidebyside/unified links, store the diff type
        in localstorage. Then, onload, use that diff type. That way, people
        who prefer one diff type or the other can always get that by default.

        * code-review.js:

2011-01-11  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        allow sidebysideifying individual files in the code review tool
        https://bugs.webkit.org/show_bug.cgi?id=52226

        * code-review.js:

2011-01-11  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Mihai Parparita.

        fix exception when adding a comment to a side-by-side diff
        https://bugs.webkit.org/show_bug.cgi?id=52240

        prev() and next() won't get the previous and next lines in
        side-by-side mode. Instead do a query to find them.

        * code-review.js:

2011-01-11  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Mihai Parparita.

        maintain word diffs when converting to side-by-side and back
        https://bugs.webkit.org/show_bug.cgi?id=52244

        Using textContent would lose the spans use to make the word-diff highlighting.
        Just move the span element itself.

        * code-review.js:

2011-01-11  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        fix layout error with comments in code review tool
        https://bugs.webkit.org/show_bug.cgi?id=52230

        * PrettyPatch/PrettyPatch.rb:

2011-01-10  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        convert back to unified from sidebyside diff
        https://bugs.webkit.org/show_bug.cgi?id=52180

        Remove url fragment stuff. Having it be per-filediff is too complicated.

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-01-07  Adam Barth  <abarth@webkit.org>
