@@ -2,6 +2,16 @@
 
         Reviewed by Adam Barth.
 
+        fix difflink centering to be vertical, not horizontal
+        https://bugs.webkit.org/show_bug.cgi?id=52263
+
+        * PrettyPatch/PrettyPatch.rb:
+        * code-review.js:
+
+2011-01-11  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Adam Barth.
+
         remember diffstate for review tool
         https://bugs.webkit.org/show_bug.cgi?id=52253
 
